--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">International University Scholarships</h3>
-                            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae.</p>
+                            <p>We help in to get scholarship in international universities for higher studies.</p>
                         </div>
                     </div>
                 </div><!--/.col-md-4-->
@@ -143,7 +143,7 @@
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Research Grants</h3>
-                            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae.</p>
+                            <p>We have you find funds and grants for your research projects.</p>
                         </div>
                     </div>
                 </div><!--/.col-md-4-->
@@ -153,8 +153,8 @@
                             <i class="icon-google-plus icon-md"></i>
                         </div>
                         <div class="media-body">
-                            <h3 class="media-heading">Timely Information</h3>
-                            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae.</p>
+                            <h3 class="media-heading">Community</h3>
+                            <p>Parhna Discover is a platform that helps you connect with mentors and alumi who received admissions and scholarships.</p>
                         </div>
                     </div>
                 </div><!--/.col-md-4-->
@@ -296,7 +296,7 @@
                                 <small>Someone famous in <cite title="Source Title">Source Title</cite></small>
                             </blockquote>
                             <blockquote>
-                                <p>Stay updated and never miss another opportunity.</p>
+                                <p>Connect with mentors and alumi.</p>
                                 <small>Someone famous in <cite title="Source Title">Source Title</cite></small>
                             </blockquote>
                         </div>
@@ -311,8 +311,8 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <h4>About Us</h4>
-                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p>
-                    <p>Pellentesque habitant morbi tristique senectus.</p>
+                    <p>Parhna is an organization with a mission to reinnovate education.</p>
+                    <p>We offer several educational products and are revolutionalizing the way people learn.</p>
                 </div><!--/.col-md-3-->
 
                 <div class="col-md-3 col-sm-6">
